--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -6,11 +7,13 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div class="container">
         <a href="#" class="btn btn-orange">ORANGE BUTTON</a>
-        <img src="img/orange.jpg" alt="" class="Orange">
-        <div class="text-effect">POGGERS!</div>
+        <img src="img/orange.jpg" alt="" class="Oranges">
+        <div class="text-effect"></div>
     </div>
 </body>
-</html> 
+
+</html>
